--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,52 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Recipe Book</a>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Recipes</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shopping List</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav mb-2 mb-lg-0" ngbDropdown display="dynamic" placement="bottom-end">
+        <a
+          class="nav-link"
+          tabindex="0"
+          ngbDropdownToggle
+          id="navbarDropdown3"
+          role="button"
+        >
+          Manage
+        </a>
+        <ul
+          ngbDropdownMenu
+          aria-labelledby="navbarDropdown3"
+          class="dropdown-menu"
+        >
+          <li ngbDropdownItem>
+            <a href="#" class="nav-link">Save Data</a>
+          </li>
+          <li ngbDropdownItem>
+            <a href="#" class="nav-link">Fetch Data</a>
+          </li>
+        </ul>
+      </ul>
+    </div>
+  </div>
+</nav>
