--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,14 +17,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Recipes</a>
+          <a
+            class="nav-link"
+            aria-current="page"
+            href="#"
+            (click)="onSelect('recipe')"
+            >Recipes</a
+          >
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Shopping List</a>
+          <a class="nav-link" href="#" (click)="onSelect('shopping-list')"
+            >Shopping List</a
+          >
         </li>
       </ul>
-      <ul class="navbar-nav mb-2 mb-lg-0" ngbDropdown display="dynamic" placement="bottom-end">
+      <ul
+        class="navbar-nav mb-2 mb-lg-0"
+        ngbDropdown
+        display="dynamic"
+        placement="bottom-end"
+      >
         <a
           class="nav-link"
           tabindex="0"
