--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,17 @@
-<p>recipe-item works!</p>
+<a
+  *ngIf="recipe"
+  href="#"
+  class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+>
+  <div>
+    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+    <p class="list-group-item-text">{{ recipe.description }}</p>
+  </div>
+  <span>
+    <img
+      src="{{ recipe.imagePath }}"
+      alt="{{ recipe.description }}"
+      class="img-fluid"
+      style="max-height: 50px"
+  /></span>
+</a>
