--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -3,26 +3,12 @@
     <button class="btn btn-success">New Recipe</button>
   </div>
 </div>
-<hr>
+<hr />
 <div class="row">
   <div class="col-sm-12">
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      *ngFor="let recipe of recipes"
-    >
-      <div>
-        <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-        <p class="list-group-item-text">{{ recipe.description }}</p>
-      </div>
-      <span>
-        <img
-          src="{{ recipe.imagePath }}"
-          alt="{{ recipe.description }}"
-          class="img-fluid"
-          style="max-height: 50px"
-      /></span>
-    </a>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item
+      *ngFor="let recipeEl of recipes"
+      [recipe]="recipeEl"
+    ></app-recipe-item>
   </div>
 </div>
