--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,32 +1,38 @@
-<div class="row">
-  <div class="col-sm-12">
-    <img src="" alt="" class="img-fluid" />
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12">
-    <h1>Recipe Name</h1>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12">
-    <div class="btn-group">
-      <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
-      <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
-      </ul>
+<div *ngIf="recipe">
+  <div class="row">
+    <div class="col-sm-12">
+      <img
+        src="{{ recipe?.imagePath }}"
+        alt="{{ recipe?.description }}"
+        class="img-fluid"
+      />
     </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-12">Description</div>
-</div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>{{ recipe?.name }}</h1>
+    </div>
+  </div>
 
-<div class="row">
-  <div class="col-sm-12">Ingredients</div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="btn-group">
+        <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
+        <ul class="dropdown-menu">
+          <li><a href="#">To Shopping List</a></li>
+          <li><a href="#">Edit Recipe</a></li>
+          <li><a href="#">Delete Recipe</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">{{ recipe?.description }}</div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">{{ recipe?.ingredients }}</div>
+  </div>
 </div>
