Finish event chain

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,6 +2,7 @@
   *ngIf="recipe"
   href="#"
   class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+  (click)="selectedRecipe()"
 >
   <div>
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
