--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,6 +7,7 @@
 <div class="row">
   <div class="col-sm-12">
     <app-recipe-item
+      (recipeSelected)="changeRecipe($event)"
       *ngFor="let recipeEl of recipes"
       [recipe]="recipeEl"
     ></app-recipe-item>
