--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -5,6 +5,7 @@
         src="{{ recipe?.imagePath }}"
         alt="{{ recipe?.description }}"
         class="img-fluid"
+        style="max-height: 300px;"
       />
     </div>
   </div>
