--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -5,7 +5,7 @@
         src="{{ recipe?.imagePath }}"
         alt="{{ recipe?.description }}"
         class="img-fluid"
-        style="max-height: 300px;"
+        style="max-height: 300px"
       />
     </div>
   </div>
@@ -18,12 +18,14 @@
 
   <div class="row">
     <div class="col-sm-12">
-      <div class="btn-group">
-        <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
-        <ul class="dropdown-menu">
-          <li><a href="#">To Shopping List</a></li>
-          <li><a href="#">Edit Recipe</a></li>
-          <li><a href="#">Delete Recipe</a></li>
+      <div class="dropdown" appDropdown #r="appDropdown" >
+        <button class="btn btn-primary dropdown-toggle" >Manage Recipe</button>
+        <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}" >
+          <li>
+            <a href="#" class="nav-link" role="button">To Shopping List</a>
+          </li>
+          <li><a href="#" class="nav-link" role="button">Edit Recipe</a></li>
+          <li><a href="#" class="nav-link" role="button">Delete Recipe</a></li>
         </ul>
       </div>
     </div>
