--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-sm-12">
       <img
-        src="{{ recipe?.imagePath }}"
-        alt="{{ recipe?.description }}"
+        src="{{ recipe.imagePath }}"
+        alt="{{ recipe.description }}"
         class="img-fluid"
         style="max-height: 300px"
       />
@@ -12,15 +12,15 @@
 
   <div class="row">
     <div class="col-sm-12">
-      <h1>{{ recipe?.name }}</h1>
+      <h1>{{ recipe.name }}</h1>
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-12">
-      <div class="dropdown" appDropdown #r="appDropdown" >
-        <button class="btn btn-primary dropdown-toggle" >Manage Recipe</button>
-        <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}" >
+      <div class="dropdown" appDropdown #r="appDropdown">
+        <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
+        <ul class="dropdown-menu" [ngClass]="{ show: r.isOpen }">
           <li>
             <a href="#" class="nav-link" role="button">To Shopping List</a>
           </li>
@@ -32,10 +32,19 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-12">{{ recipe?.description }}</div>
+    <div class="col-sm-12">{{ recipe.description }}</div>
   </div>
 
   <div class="row">
-    <div class="col-sm-12">{{ recipe?.ingredients }}</div>
+    <div class="col-sm-12">
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let ingredient of recipe.ingredients"
+        >
+          {{ ingredient.name }} - {{ ingredient.amount }}
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
