--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,10 +22,25 @@
         <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
         <ul class="dropdown-menu" [ngClass]="{ show: r.isOpen }">
           <li>
-            <a href="#" class="nav-link" role="button">To Shopping List</a>
+            <a
+              href="#"
+              class="nav-link"
+              role="button"
+              (click)="addToShoppingList()"
+              style="cursor: pointer"
+              >To Shopping List</a
+            >
           </li>
-          <li><a href="#" class="nav-link" role="button">Edit Recipe</a></li>
-          <li><a href="#" class="nav-link" role="button">Delete Recipe</a></li>
+          <li>
+            <a href="#" class="nav-link" role="button" style="cursor: pointer"
+              >Edit Recipe</a
+            >
+          </li>
+          <li>
+            <a href="#" class="nav-link" role="button" style="cursor: pointer"
+              >Delete Recipe</a
+            >
+          </li>
         </ul>
       </div>
     </div>
