--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Recipe Book</a>
+    <a class="navbar-brand" routerLink=" ">Recipe Book</a>
 
     <button
       class="navbar-toggler"
@@ -20,14 +20,17 @@
           <a
             class="nav-link"
             aria-current="page"
-            href="#"
-            (click)="onSelect('recipe')"
+            routerLink="recipes"
+            routerLinkActive="active"
             >Recipes</a
           >
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onSelect('shopping-list')"
+          <a
+            class="nav-link"
+            routerLink="shopping-list"
+            routerLinkActive="active"
             >Shopping List</a
           >
         </li>
@@ -53,10 +56,14 @@
           class="dropdown-menu"
         >
           <li ngbDropdownItem>
-            <a href="#" class="nav-link">Save Data</a>
+            <a routerLink="#" class="nav-link" routerLinkActive="active"
+              >Save Data</a
+            >
           </li>
           <li ngbDropdownItem>
-            <a href="#" class="nav-link">Fetch Data</a>
+            <a routerLink="#" class="nav-link" routerLinkActive="active"
+              >Fetch Data</a
+            >
           </li>
         </ul>
       </ul>
