Fix details component

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,6 @@
         <ul class="dropdown-menu" [ngClass]="{ show: r.isOpen }">
           <li>
             <a
-              href="#"
               class="nav-link"
               role="button"
               (click)="addToShoppingList()"
@@ -32,12 +31,12 @@
             >
           </li>
           <li>
-            <a href="#" class="nav-link" role="button" style="cursor: pointer"
+            <a class="nav-link" role="button" style="cursor: pointer"
               >Edit Recipe</a
             >
           </li>
           <li>
-            <a href="#" class="nav-link" role="button" style="cursor: pointer"
+            <a class="nav-link" role="button" style="cursor: pointer"
               >Delete Recipe</a
             >
           </li>
