--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,8 +1,8 @@
 <a
   *ngIf="recipe"
-  href="#"
   class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
   (click)="onSelected()"
+  style="cursor: pointer"
 >
   <div>
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
