--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -31,7 +31,11 @@
             >
           </li>
           <li>
-            <a class="nav-link" role="button" style="cursor: pointer"
+            <a
+              class="nav-link"
+              role="button"
+              style="cursor: pointer"
+              [routerLink]="['edit']"
               >Edit Recipe</a
             >
           </li>
