--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,25 +1,31 @@
 <div class="row">
   <div class="col-sm-12">
-    <form>
+    <form (ngSubmit)="addNewIngredient(f)" #f="ngForm">
       <div class="row mb-3">
         <div class="col-sm-5 form-group">
           <label for="name" class="form-label">Name</label>
-          <input type="text" id="name" class="form-control" #name />
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            name="name"
+            ngModel
+          />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount" class="form-label">Amount</label>
-          <input type="number" id="amount" class="form-control" #amount />
+          <input
+            type="number"
+            id="amount"
+            class="form-control"
+            name="amount"
+            ngModel
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button
-            class="btn btn-success me-2"
-            (click)="addNewIngredient()"
-            type="button"
-          >
-            Add
-          </button>
+          <button class="btn btn-success me-2" type="submit">Add</button>
           <button class="btn btn-danger me-2" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
