--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -10,6 +10,8 @@
             class="form-control"
             name="name"
             ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
           />
         </div>
         <div class="col-sm-2 form-group">
@@ -20,12 +22,19 @@
             class="form-control"
             name="amount"
             ngModel
+            required
           />
         </div>
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <button class="btn btn-success me-2" type="submit">Add</button>
+          <button
+            class="btn btn-success me-2"
+            type="submit"
+            [disabled]="!f.valid"
+          >
+            Add
+          </button>
           <button class="btn btn-danger me-2" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
