--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <form (ngSubmit)="addNewIngredient(f)" #f="ngForm">
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row mb-3">
         <div class="col-sm-5 form-group">
           <label for="name" class="form-label">Name</label>
@@ -11,7 +11,6 @@
             name="name"
             ngModel
             required
-            pattern="^[1-9]+[0-9]*$"
           />
         </div>
         <div class="col-sm-2 form-group">
@@ -23,6 +22,7 @@
             name="amount"
             ngModel
             required
+            pattern="^[1-9]+[0-9]*$"
           />
         </div>
       </div>
@@ -33,10 +33,19 @@
             type="submit"
             [disabled]="!f.valid"
           >
-            Add
+            {{ editMode ? "Update" : "Add" }}
           </button>
-          <button class="btn btn-danger me-2" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button
+            class="btn btn-danger me-2"
+            type="button"
+            (click)="onDelete()"
+            *ngIf="editMode"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
