--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,33 +1,47 @@
 <div class="row">
   <div class="col-sm-12">
-    <form>
-      <div class="row">
-        <div class="col-sm-12 mb-2">
-          <button type="submit" class="btn btn-success me-3">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
-        </div>
-      </div>
+    <form [formGroup]="recipeForm">
       <div class="row">
         <div class="col-sm-12 mb-2">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" class="form-control" />
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+              formControlName="name"
+            />
           </div>
         </div>
       </div>
+
+      <div
+        *ngIf="recipeForm.value.imagePath"
+        class="row justify-content-center"
+      >
+        <div class="col-sm-12 mb-2 w-50">
+          <img
+            [src]="recipeForm.value.imagePath"
+            class="img-fluid"
+            [alt]="recipeForm.value.description"
+          />
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-sm-12 mb-2">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input type="text" id="imagePath" class="form-control" />
+            <input
+              type="text"
+              id="imagePath"
+              class="form-control"
+              formControlName="imagePath"
+            />
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12 mb-2">
-          <img src="" class="img-responsive" />
-        </div>
-      </div>
+
       <div class="row">
         <div class="col-sm-12 mb-2">
           <div class="form-group">
@@ -36,29 +50,61 @@
               type="text"
               id="description"
               class="form-control"
-              rows="6"
+              formControlName="description"
+              rows="3"
             ></textarea>
           </div>
         </div>
       </div>
+
       <div class="row mb-2">
-        <div class="col-sm-12">
-          <div class="row mt-1">
+        <div class="col-sm-12" formArrayName="ingredients">
+          <div
+            class="row mt-2 mb-3"
+            *ngFor="let ingredientCtrl of controls; let i = index"
+            [formGroupName]="i"
+          >
             <div class="col-sm-8">
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control" formControlName="name" />
             </div>
             <div class="col-sm-2">
-              <input type="number" class="form-control" />
+              <input
+                type="number"
+                class="form-control"
+                formControlName="amount"
+              />
             </div>
             <div class="col-sm-2">
               <button type="button" class="btn btn-danger">X</button>
             </div>
           </div>
-          <hr />
+
           <div class="row">
-            <div class="col-sm-12">
-              <button type="button" class="btn btn-success">
+            <div class="col-sm-12 d-flex justify-content-end">
+              <button
+                type="button"
+                class="btn btn-warning"
+                (click)="onAddIngredient()"
+              >
                 Add Ingredient
+              </button>
+            </div>
+          </div>
+
+          <hr />
+
+          <div class="row">
+            <div class="col-sm-12 mb-2">
+              <button
+                type="submit"
+                class="btn btn-success me-3"
+                (click)="onSubmit()"
+                [disabled]="!recipeForm.valid"
+              >
+                {{ editing ? "Update" : "Save" }}
+              </button>
+              <button type="button" class="btn btn-danger" (click)="onCancel()">
+                Cancel
               </button>
             </div>
           </div>
