Add deleting functionalty

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -40,7 +40,12 @@
             >
           </li>
           <li>
-            <a class="nav-link" role="button" style="cursor: pointer"
+            <a
+              class="nav-link"
+              role="button"
+              style="cursor: pointer"
+              routerLink="/recipes"
+              (click)="onDeleteRecipe()"
               >Delete Recipe</a
             >
           </li>
