Adding http client

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -56,14 +56,10 @@
           class="dropdown-menu"
         >
           <li ngbDropdownItem>
-            <a routerLink="#" class="nav-link" routerLinkActive="active"
-              >Save Data</a
-            >
+            <a class="nav-link pointer" (click)="onSaveData()">Save Data</a>
           </li>
           <li ngbDropdownItem>
-            <a routerLink="#" class="nav-link" routerLinkActive="active"
-              >Fetch Data</a
-            >
+            <a class="nav-link pointer" (click)="onFetchData()">Fetch Data</a>
           </li>
         </ul>
       </ul>
