Add signup endpoint

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,6 +34,11 @@
             >Shopping List</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="auth" routerLinkActive="active"
+            >Authenticate</a
+          >
+        </li>
       </ul>
       <ul
         class="navbar-nav mb-2 mb-lg-0"
