--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,21 +1,35 @@
 <div class="row">
   <div class="col-sm-12 col-md-6 offset-3">
-    <form>
+    <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
       <div class="p-2">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" />
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            formControlName="email"
+          />
         </div>
       </div>
       <div class="p-2">
         <label for="password" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="password" />
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            formControlName="password"
+          />
         </div>
       </div>
       <div class="p-2">
-        <button class="btn btn-primary">Sign Up</button>|
-        <button class="btn btn-primary">Switch to Login</button>
+        <button class="btn btn-primary" type="submit">
+          {{ isLoginMode ? "Login" : "Sign Up" }}</button
+        >|
+        <button class="btn btn-primary" (click)="onSwitchMode()" type="button">
+          Switch to {{ isLoginMode ? "Sign Up" : "Login" }}
+        </button>
       </div>
     </form>
   </div>
