--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-sm-12 col-md-6 offset-3">
-    <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+    <app-loading *ngIf="isLoading"></app-loading>
+    <form *ngIf="!isLoading" [formGroup]="authForm" (ngSubmit)="onSubmit()">
       <div class="p-2">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
