--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,8 @@
 <div class="row">
   <div class="col-sm-12 col-md-6 offset-3">
+    <div class="alert alert-danger p-2 col-sm-10" *ngIf="error">
+      <p>{{ error }}</p>
+    </div>
     <app-loading *ngIf="isLoading"></app-loading>
     <form *ngIf="!isLoading" [formGroup]="authForm" (ngSubmit)="onSubmit()">
       <div class="p-2">
