Add logout logic

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -64,7 +64,7 @@
           </a>
         </li>
         <li>
-          <a class="nav-link pointer" *ngIf="isAuthenticated">Logout</a>
+          <a class="nav-link pointer" *ngIf="isAuthenticated"  (click)="logout()" >Logout</a>
         </li>
         <ul
           ngbDropdownMenu
